add classes for width and height scaling and bioinformatics pipeline cards

--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -4,10 +4,7 @@
             <div class="section-title bs4-w-100">
                 <div class="bs4-card-deck">
                     <div class="bs4-card">
-                        <img class="bs4-card-img-top img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/53179/150.png/f930728c-0709-4483-9599-627ce657c9a0?t=1582115697396"
-                            alt="">
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                                 <div class="bs4-card-text bs4-h2">
                                     Epigenomics
@@ -17,10 +14,7 @@
                         </div>
                     </div>
                     <div class="bs4-card">
-                        <img class="bs4-card-img-top img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/53179/150.png/f930728c-0709-4483-9599-627ce657c9a0?t=1582115697396"
-                            alt="">
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                                 <div class="bs4-card-text bs4-h2">
                                     Expression Analysis
@@ -30,10 +24,7 @@
                         </div>
                     </div>
                     <div class="bs4-card">
-                        <img class="bs4-card-img-top img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/53179/150.png/f930728c-0709-4483-9599-627ce657c9a0?t=1582115697396"
-                            alt="">
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                                 <div class="bs4-card-text bs4-h2">
                                     Metagenomics
@@ -43,10 +34,7 @@
                         </div>
                     </div>
                     <div class="bs4-card">
-                        <img class="bs4-card-img-top img-cover"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/53179/150.png/f930728c-0709-4483-9599-627ce657c9a0?t=1582115697396"
-                            alt="">
-                        <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
+                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                                 <div class="bs4-card-text bs4-h2">
                                     Variant Detection
