uncountable changes. commit to large changed several styling decisions session with SG

--- a/site/sequencing-solutions/methods.html
+++ b/site/sequencing-solutions/methods.html
@@ -1,53 +1,50 @@
-<section id="SeqSol-Protocols">
+<section id="sequencing-methods">
     <div class="container">
         <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">Sequencing Methods</div>
-
-        <div class="slide-subtitle bs4-text-center bs4-mb-5 bs4-h3">Check out our wide portfolio of sequencing methods!
-        </div>
 
         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-card-columns">
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Epigenomics</div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
-                        <li class="bs4-list-group-item"><a href="#">Whole genome bisulfite sequencing</a></li>
+                    <ul class="bs4-list-group bs4-text-center">
+                        <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
                     </ul>
                 </div>
 
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Expression Analysis</div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
-                        <li class="bs4-list-group-item"><a href="#">mRNA sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Total RNA sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">3'-Sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">scRNA sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">miRNA sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">smallRNA sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">long-Read RNA sequencing</a></li>
+                    <ul class="bs4-list-group bs4-text-center">
+                        <li class="bs4-list-group-item">mRNA sequencing</li>
+                        <li class="bs4-list-group-item">Total RNA sequencing</li>
+                        <li class="bs4-list-group-item">3'-Sequencing</li>
+                        <li class="bs4-list-group-item">scRNA sequencing</li>
+                        <li class="bs4-list-group-item">miRNA sequencing</li>
+                        <li class="bs4-list-group-item">smallRNA sequencing</li>
+                        <li class="bs4-list-group-item">long-Read RNA sequencing</li>
                     </ul>
                 </div>
 
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Metagenomics</div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
-                        <li class="bs4-list-group-item"><a href="#">Shotgun Metagenomics</a></li>
-                        <li class="bs4-list-group-item"><a href="#">16S/Amplicon Sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Metatranscriptomics</a></li>
+                    <ul class="bs4-list-group bs4-text-center">
+                        <li class="bs4-list-group-item">Shotgun Metagenomics</li>
+                        <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
+                        <li class="bs4-list-group-item">Metatranscriptomics</li>
                     </ul>
                 </div>
 
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Variant Detection</div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
-                        <li class="bs4-list-group-item"><a href="#">Whole Genome sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Long-Read sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Panel sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Exome sequencing</a></li>
-                        <li class="bs4-list-group-item"><a href="#">Targeted RNA sequencing</a></li>
+                    <ul class="bs4-list-group bs4-text-center">
+                        <li class="bs4-list-group-item">Whole Genome sequencing</li>
+                        <li class="bs4-list-group-item">Long-Read sequencing</li>
+                        <li class="bs4-list-group-item">Panel sequencing</li>
+                        <li class="bs4-list-group-item">Exome sequencing</li>
+                        <li class="bs4-list-group-item">Targeted RNA sequencing</li>
                     </ul>
                 </div>
             </div>
