--- a/site/sequencing-solutions/instruments.html
+++ b/site/sequencing-solutions/instruments.html
@@ -1,9 +1,8 @@
-<section id="SeqSol-Instruments">
-    <div class="container">
-        <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">All major technologies under one roof!</div>
-
-        <div class="slide-subtitle bs4-text-center bs4-mb-5 bs4-h3">State of the art instruments provide precise results
-            fast and reliable.</div>
+<section id="instruments">
+    <div class="bs4-container">
+        <div class="section-title">
+            <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
+        </div>
 
         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-card-columns two-columns">
@@ -11,7 +10,7 @@
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Liquid Handling Systems
                     </div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
+                    <ul class="bs4-list-group bs4-text-center">
                         <li class="bs4-list-group-item">QIAcube</li>
                         <li class="bs4-list-group-item">Agilent Bravo</li>
                         <li class="bs4-list-group-item">QIASymphony</li>
@@ -23,7 +22,7 @@
                 <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sequencers</div>
 
-                    <ul class="bs4-list-group bs4-text-center bs4-h5">
+                    <ul class="bs4-list-group bs4-text-center">
                         <li class="bs4-list-group-item">NextSeq500</li>
                         <li class="bs4-list-group-item">MiSeq</li>
                         <li class="bs4-list-group-item">NovaSeq6000</li>
