Ensure correct card alignment after reordering
REPLACE bs4-card-columns class with bs4-card-deck class to ensure spacing is kept between cards
ADD bs4-border-0 to each card to remove unnecessary card border for each card

--- a/site/sequencing-solutions/methods.html
+++ b/site/sequencing-solutions/methods.html
@@ -6,8 +6,8 @@
                     <div class="bs4-h1 bs4-text-center">Sequencing Methods</div>
                 </div>
 
-                <div class="bs4-card-columns">
-                    <div class="bs4-card">
+                <div class="bs4-card-deck">
+                    <div class="bs4-card bs4-border-0">
                         <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Variant Detection</div>
 
                         <ul class="bs4-list-group bs4-text-left">
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
 
-                    <div class="bs4-card">
+                    <div class="bs4-card bs4-border-0">
                         <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">Expression Analysis</div>
 
                         <ul class="bs4-list-group bs4-text-left">
@@ -33,7 +33,7 @@
                         </ul>
                     </div>
 
-                    <div class="bs4-card">
+                    <div class="bs4-card bs4-border-0">
                         <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Metagenomics</div>
 
                         <ul class="bs4-list-group bs4-text-left">
@@ -43,7 +43,7 @@
                         </ul>
                     </div>
 
-                    <div class="bs4-card">
+                    <div class="bs4-card bs4-border-0">
                         <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Epigenomics</div>
 
                         <ul class="bs4-list-group bs4-text-left">
