--- a/site/sequencing-solutions/instruments.html
+++ b/site/sequencing-solutions/instruments.html
@@ -7,20 +7,6 @@
         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-card-columns two-columns">
                 <div class="bs4-card">
-                    <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sample Preparation Systems
-                    </div>
-
-                    <ul class="bs4-list-group bs4-text-center">
-                        <li class="bs4-list-group-item">QIAcube</li>
-                        <li class="bs4-list-group-item">Agilent Bravo</li>
-                        <li class="bs4-list-group-item">QIASymphony</li>
-                        <li class="bs4-list-group-item">Tecan Fluent 780</li>
-                        <li class="bs4-list-group-item">MGISP-100</li>
-                        <li class="bs4-list-group-item">10x Genomics</li>
-                    </ul>
-                </div>
-
-                <div class="bs4-card">
                     <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sequencers</div>
 
                     <ul class="bs4-list-group bs4-text-center">
@@ -31,7 +17,20 @@
                         <li class="bs4-list-group-item">ONT Nanopore MinION</li>
                         <li class="bs4-list-group-item">ONT Nanopore PromethION</li>
                         <li class="bs4-list-group-item">PacBio Sequel II</li>
-                        
+                    </ul>
+                </div>
+
+                <div class="bs4-card">
+                    <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sample Preparation
+                        Systems</div>
+
+                    <ul class="bs4-list-group bs4-text-center">
+                        <li class="bs4-list-group-item">QIAcube</li>
+                        <li class="bs4-list-group-item">Agilent Bravo</li>
+                        <li class="bs4-list-group-item">QIASymphony</li>
+                        <li class="bs4-list-group-item">Tecan Fluent 780</li>
+                        <li class="bs4-list-group-item">MGISP-100</li>
+                        <li class="bs4-list-group-item">10x Genomics</li>
                     </ul>
                 </div>
             </div>
