--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -1,4 +1,4 @@
-<section class="" id="bioinformatics-services">
+<section id="bioinformatics-services">
     <div class="bs4-container">
         <div class="bs4-row">
             <div class="section-title bs4-w-100">
@@ -6,41 +6,32 @@
                     <div class="bs4-card">
                         <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">
-                                    Epigenomics
-                                </div>
+                                <div class="bs4-card-text bs4-h2">Variant Detection</div>
                             </div>
-                            <a href="#bs-epigenomics" class="bs4-stretched-link"></a>
                         </div>
                     </div>
+
                     <div class="bs4-card">
                         <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">
-                                    Expression Analysis
-                                </div>
+                                <div class="bs4-card-text bs4-h2">Expression Analysis</div>
                             </div>
-                            <a href="#bs-expression-analysis" class="bs4-stretched-link"></a>
                         </div>
                     </div>
+
                     <div class="bs4-card">
                         <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">
-                                    Metagenomics
-                                </div>
+                                <div class="bs4-card-text bs4-h2">Metagenomics</div>
                             </div>
-                            <a href="#bs-metagenomics" class="bs4-stretched-link"></a>
                         </div>
                     </div>
+
                     <div class="bs4-card">
                         <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                             <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">
-                                    Variant Detection
-                                </div>
+                                <div class="bs4-card-text bs4-h2">Epigenomics</div>
                             </div>
-                            <a href="#bs-variant-detection" class="bs4-stretched-link"></a>
                         </div>
                     </div>
                 </div>
