--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -1,38 +1,54 @@
-<section id="bioinformatics-services">
+<section id="bioinformatic-services">
     <div class="bs4-container">
         <div class="bs4-row">
-            <div class="section-title bs4-w-100">
+            <div class="bs4-col">
+                <div class="section-title">
+                    <div class="bs4-h1 bs4-text-center">Bioinformatics Services</div>
+                </div>
+
                 <div class="bs4-card-deck">
-                    <div class="bs4-card">
-                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Variant Detection</div>
-                            </div>
-                        </div>
+                    <div class="bs4-card bs4-border-0">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Variant Detection</div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Whole Genome sequencing</li>
+                            <li class="bs4-list-group-item">Long-Read sequencing</li>
+                            <li class="bs4-list-group-item">Panel sequencing</li>
+                            <li class="bs4-list-group-item">Exome sequencing</li>
+                            <li class="bs4-list-group-item">Targeted RNA sequencing</li>
+                        </ul>
                     </div>
 
-                    <div class="bs4-card">
-                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Expression Analysis</div>
-                            </div>
-                        </div>
+                    <div class="bs4-card bs4-border-0">
+                        <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">Expression Analysis</div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">mRNA sequencing</li>
+                            <li class="bs4-list-group-item">Total RNA sequencing</li>
+                            <li class="bs4-list-group-item">3'-Sequencing</li>
+                            <li class="bs4-list-group-item">scRNA sequencing</li>
+                            <li class="bs4-list-group-item">miRNA sequencing</li>
+                            <li class="bs4-list-group-item">smallRNA sequencing</li>
+                            <li class="bs4-list-group-item">long-Read RNA sequencing</li>
+                        </ul>
                     </div>
 
-                    <div class="bs4-card">
-                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Metagenomics</div>
-                            </div>
-                        </div>
+                    <div class="bs4-card bs4-border-0">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Metagenomics</div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Shotgun Metagenomics</li>
+                            <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
+                            <li class="bs4-list-group-item">Metatranscriptomics</li>
+                        </ul>
                     </div>
 
-                    <div class="bs4-card">
-                        <div class="bs4-card-body bs4-d-flex bs4-align-items-center bs4-justify-content-center">
-                            <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
-                                <div class="bs4-card-text bs4-h2">Epigenomics</div>
-                            </div>
-                        </div>
+                    <div class="bs4-card bs4-border-0">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Epigenomics</div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
+                        </ul>
                     </div>
                 </div>
             </div>
