Replaced cards with nf-core styling with non-nf-core card styling

--- a/site/bioinformatics-services/variant-detection.html
+++ b/site/bioinformatics-services/variant-detection.html
@@ -3,86 +3,86 @@
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="section-title">
-                    <div class="bs4-h1">
-                        Variant Detection
-                    </div>
+                    <div class="bs4-h1">Variant Detection</div>
                 </div>
+
                 <div class="bs4-card-columns">
                     <div class="bs4-card min-vw-10">
                         <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
+
                     <div class="bs4-card min-vw-10">
-                        <img alt="" class="bs4-card-img-top bg-ncct-dark max-vh-10"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55517/nf-core-logo-darkbg.svg/c57e1b15-175a-4162-a2df-40cdacd02702" />
+                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+
                         <div class="bs4-card-body">
-                            <div class="bs4-card-title bs4-font-weight-bold">awesome-pipeline</div>
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
                         </div>
                     </div>
