--- a/site/bioinformatics-services/variant-detection.html
+++ b/site/bioinformatics-services/variant-detection.html
@@ -8,7 +8,8 @@
 
                 <div class="bs4-card-columns">
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -16,7 +17,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -24,7 +26,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -32,7 +35,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -40,7 +44,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -48,7 +53,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -56,7 +62,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -64,7 +71,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -72,7 +80,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
@@ -80,7 +89,8 @@
                     </div>
 
                     <div class="bs4-card min-vw-10">
-                        <div class="bs4-card-header bs4-font-weight-bold">no-nfcore-pipeline</div>
+                        <div class="bs4-card-header bs4-font-weight-bold bs4-text-white bg-ncct">no-nfcore-pipeline
+                        </div>
 
                         <div class="bs4-card-body">
                             <div class="bs4-card-text">Short description on what the pipeline is aiming for.</div>
