Centered title text alignment for all sections
ADD bs4-text-center to section titles

--- a/site/bioinformatics-services/variant-detection.html
+++ b/site/bioinformatics-services/variant-detection.html
@@ -3,7 +3,7 @@
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="section-title">
-                    <div class="bs4-h1">Variant Detection</div>
+                    <div class="bs4-h1 bs4-text-center">Variant Detection</div>
                 </div>
 
                 <div class="bs4-card-columns">
