--- a/site/bioinformatics-services/metagenomics.html
+++ b/site/bioinformatics-services/metagenomics.html
@@ -3,7 +3,7 @@
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="section-title">
-                    <div class="bs4-h1">Metagenomics</div>
+                    <div class="bs4-h1 bs4-text-center">Metagenomics</div>
                 </div>
 
                 <div class="bs4-card-columns">
