Added subtitle mentioning nf-core and class for setting img size to text size
custom.css
ADD img.img-in-text class
bioinformatic-services.html
ADD subtitle mentioning nf core

--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -4,6 +4,11 @@
             <div class="bs4-col">
                 <div class="section-title">
                     <div class="bs4-h1 bs4-text-center">Bioinformatics Services</div>
+
+                    <div class="bs4-h3 bs4-text-center bs4-mt-5">We employ only high-quality curated <a
+                            href="https://nf-co.re/"><img alt="nf-core" class="img-in-text"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/57614/nf-core-logo/f36e4173-cae9-4a98-bb55-40cabba32c87?t=1585750169857" /></a>
+                        pipelines</div>
                 </div>
 
                 <div class="bs4-card-deck">
